# cuverif

./: .gitignore  4state_implementation_plan.md  CUDA_PERF_NOTES.md  CuVerif Studio.spec  GPU_VALIDATION_CHECKLIST.md  GUI_STUDIO.md  JTAG_IMPLEMENTATION.md  LICENSE  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TEST_STATUS.md  TEST_SUMMARY.md  WINDOWS_INSTALLER.md  build_windows.bat  dummy.v  pyproject.toml  requirements.txt  setup_exe.py  setup_installer.iss  signals.json  smoke_test.py
.github/workflows/: ci.yml
docs/: VALIDATION.md
examples/: riscv_alu.v
experiments/: test_real_netlist.py
src/: cuverif_studio.py  gui_app.py
src/cuverif/: __init__.py  bridge.py  cli.py  compiler.py  core.py  cuda_kernels.py  debug.py  faults.py  jtag.py  modules.py  monitor.py  p4_manager.py
src/cuverif/backend/: __init__.py  base.py  converter.py  cpu_backend.py  cuda_backend.py
tests/: benchmark_h100.py  mock_cuverif.py  simple_cpu.v  tb_dummy.sv  test_compiler.py  test_dff_contract.py  test_dff_semantics.py  test_fault_injection.py  test_generated_model.py  test_jtag_3d.py  test_logic_truth_tables.py  test_reset_glitch.py  test_scan_chain.py  test_scan_semantics.py  test_silicon_lifecycle.py  test_vcd_export.py  test_x_propagation.py
tools/: VCS_HARNESS_README.md  compare_traces.py  compare_vs_vcs.py  fault_grading_demo.py  generate_stimulus.py  mock_vcs.py  parse_vcd.py  scan_zero_time_demo.py  stimulus.json  stimulus.mem  trace_cuverif.py  trace_vcs_mock.json
